--- a/yelp_clone/app/views/restaurants/index.html.erb
+++ b/yelp_clone/app/views/restaurants/index.html.erb
@@ -1,3 +1,11 @@
+
+<% if user_signed_in? %>
+<%= link_to('Sign out', destroy_user_session_path, method: :delete) %>
+<% else %>
+<%= link_to('Sign in', new_user_session_path) %>
+<%= link_to('Sign up', new_user_registration_path) %>
+<% end %>
+
 <% if @restaurants.all.any? %>
   <% @restaurants.all.each do |restaurant| %>
     <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
